add style to css for carousel

--- a/app/theme/frontend/default/template/index.phtml
+++ b/app/theme/frontend/default/template/index.phtml
@@ -68,17 +68,17 @@ $(document).ready(function() {
             <div class="newsCon">
 					<div class="pic"> 
 						<img id="pic-1" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" width="280" height="170" alt="" />
-						<img id="pic-2" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
-						<img id="pic-3" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
-						<img id="pic-4" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
-						<img id="pic-5" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
-						<img id="pic-6" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
-						<img id="pic-7" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
-						<img id="pic-8" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
-						<img id="pic-9" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
-						<img id="pic-10" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
-						<img id="pic-11" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
-						<img id="pic-12" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
+						<img id="pic-2" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
+						<img id="pic-3" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
+						<img id="pic-4" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
+						<img id="pic-5" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
+						<img id="pic-6" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
+						<img id="pic-7" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
+						<img id="pic-8" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
+						<img id="pic-9" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
+						<img id="pic-10" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
+						<img id="pic-11" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
+						<img id="pic-12" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" class="hidden" width="280" height="170" alt="" />
 						</div>
 	           		<div class="news">
 	               	  <div id="news-1">
@@ -86,57 +86,57 @@ $(document).ready(function() {
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-	                  <div id="news-2" style="display: none; visibility: hidden">
+	                  <div id="news-2" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">222 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-	                  <div id="news-3" style="display: none; visibility: hidden">
+	                  <div id="news-3" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">333 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-	                  <div id="news-4" style="display: none; visibility: hidden">
+	                  <div id="news-4" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">444 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-	                  <div id="news-5" style="display: none; visibility: hidden">
+	                  <div id="news-5" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">555 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-	                  <div id="news-6" style="display: none; visibility: hidden">
+	                  <div id="news-6" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">666 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-	                  <div id="news-7" style="display: none; visibility: hidden">
+	                  <div id="news-7" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">777 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-	                  <div id="news-8" style="display: none; visibility: hidden">
+	                  <div id="news-8" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">888 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-	                  <div id="news-9" style="display: none; visibility: hidden">
+	                  <div id="news-9" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">999 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-					  <div id="news-10" style="display: none; visibility: hidden">
+					  <div id="news-10" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">10 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-	                  <div id="news-11" style="display: none; visibility: hidden">
+	                  <div id="news-11" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">11 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
 	                  
-	                  <div id="news-12" style="display: none; visibility: hidden">
+	                  <div id="news-12" class="hidden">
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">12 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
