--- a/public/skin/frontend/default/ar_jo/css/styles_car2dar.css
+++ b/public/skin/frontend/default/ar_jo/css/styles_car2dar.css
@@ -213,7 +213,7 @@ h2 {font-size:16px; margin:30px 0 7px 0; padding-bottom:5px; font-weight:400; bo
 .winner {width:430px; background:url(../images/bg_winner.png) repeat-x bottom; padding:10px;box-shadow:0 0 10px rgba(0, 0, 0, 0.5); border:#fff solid 1px;border-radius:4px; margin:auto}
 .winner .winnerCon {background:#fff; border:#ccc solid 1px;}
 .winner .hdr {background:#e02222 url(../images/bg_menu.png) repeat-x bottom; padding:10px; color:#fff; font-weight:700}
-.winner .ttl {font-size:18px; font-weight:700;; margin:10px 0 15px 0;}
+.winner .ttl {font-size:18px; font-weight:700; margin:10px 0 15px 0;}
 .winner .close {font-size:11px; float:right; cursor:pointer}
 .winner .wcon {padding:10px;}
 .winner .form {margin: 10px 0 20px 0}
@@ -240,3 +240,5 @@ h2 {font-size:16px; margin:30px 0 7px 0; padding-bottom:5px; font-weight:400; bo
 .mapIcon a:link, .mapIcon a:visited {color:#333;}
 .mapCloseIcon {background:url(../images/list.png) no-repeat 2px 10px; padding: 10px 0 0 22px}
 .mapCloseIcon a:link, .mapCloseIcon a:visited {color:#333;}
+
+.hidden {display: none; visibility: hidden;}
