handle JS for newsletter email

--- a/app/theme/frontend/default/template/blocks/newsletter.phtml
+++ b/app/theme/frontend/default/template/blocks/newsletter.phtml
@@ -1,8 +1,10 @@
+      	<form action="" method="post">
       	<div class="newsletter">
         	<div><label>Sign up for our newsletter</label></div>
        	  <div>
-                <input type="button" class="btn" value="Subscribe" />
-            <input class="field" type="text" value="Your email" />
+                <input type="submit" class="btn" value="Subscribe" id="submitEmail" />
+            <input class="field" type="text" id="email" name="email" title="Your email" />
                 <div class="cls"></div>
         	</div>
         </div>
+        </form>
