--- a/app/theme/frontend/default/template/header/meta.phtml
+++ b/app/theme/frontend/default/template/header/meta.phtml
@@ -5,9 +5,4 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 <link href="<?php echo $this->defaultSkinCssUrl ?>styles_car2dar.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="<?php print $this->defaultSkinJsUrl; ?>jquery-1.4.4.min.js"></script>
-
-
-<!-- <script type="text/javascript" src="<?php print $this->defaultSkinJsUrl; ?>index.js"></script>
-<script type="text/javascript" src="<?php print $this->defaultSkinJsUrl; ?>jquery.timers-1.2.js.txt"></script>
-<script type="text/javascript" src="<?php print $this->defaultSkinJsUrl; ?>jquery.cycle.all.min.js"></script> -->
-
+<script type="text/javascript" src="<?php print $this->defaultSkinJsUrl; ?>newsletter.js"></script>
