- Replace all locale_id with this $this -> fc -> settings -> locale -> default -> current -> id - Implement contact us form - please dont forget to replace my email with CAR2DAR one - Remove URL validation from Object_form_static and Menu_form_defaultAdmin - Modify buildMenu() by add json_decode to option - Build Static Pages Menu and Page request - Build main navagation Menu - Remove aboutus/mission/services/sitemap.phtml (static pages for testing)

--- a/app/theme/frontend/default/template/header/logo.phtml
+++ b/app/theme/frontend/default/template/header/logo.phtml
@@ -20,11 +20,16 @@
                 <div class="cls"></div>
             </div>
             <div>
-<ul>
-                	<li><a href="<?php echo $this -> rootUrl?>">Home</a></li>
+				<ul>
+					<?php 
+					foreach ( $this->menuList['upper_menu'] as $key => $value) {
+						echo '<li><a href="' . $this -> rootUrl . $value['link'] . '">' . $value['label'] . '</a></li>';
+					} 
+					?>
+                	<!-- <li><a href="<?php echo $this -> rootUrl?>">Home</a></li>
                     <li><a href="<?php echo $this -> rootUrl?>default/aboutus">About us</a></li>
                     <li><a href="<?php echo $this -> rootUrl?>default/mission">Mission</a></li>
-                    <li><a href="<?php echo $this -> rootUrl?>default/services">Services</a></li>
+                    <li><a href="<?php echo $this -> rootUrl?>default/services">Services</a></li> -->
                     <li class="last"><a href="<?php echo $this -> rootUrl?>default/contactus">Contact us</a></li>
                 </ul>
             </div>
