--- a/app/theme/frontend/default/template/static.phtml
+++ b/app/theme/frontend/default/template/static.phtml
@@ -4,7 +4,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <?php include './header/meta.phtml'; ?>
-<link href="<?php echo $this->defaultSkinCssUrl ?>contactus.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -29,31 +28,15 @@
     <div class="con">
    	  <div class="hLftPan">
    	  	
-   	  	<h3>Contact us</h3>
+   	  	<div>
+   	  		<h3><?php echo $this -> staticPage['alias'] ?></h3>
+   	  	</div>
 
-		<div id="wrapper">
-		  <div id="form-div">
-		    <form class="form" id="form1" action="/default/contactus" method="post">
-		      <p class="name">
-		        <input name="name" type="text" id="name" />
-		        <label for="name">Name</label>
-		      </p>
-		      
-		      <p class="email">
-		        <input name="email" type="text" id="email" />
-		        <label for="email">E-mail</label>
-		      </p>
-		      
-		      <p class="text">
-		        <textarea name="body" id="comment"></textarea>
-		      </p>
-		      
-		      <p class="submit">
-		        <input type="submit" value="Send" />
-		      </p>
-		    </form>
-		  </div>
-		 </div>
+		<br />
+
+		<div> 
+			<?php echo $this -> staticPage['full_text'] ?>
+		</div>
 
 
 	<!--right-->
