Add car2dar logos Clean dashboard ad menu

--- a/app/theme/backend/default/template/dashboard.phtml
+++ b/app/theme/backend/default/template/dashboard.phtml
@@ -11,14 +11,14 @@
 <?php include './html/notification.phtml'; ?>
     <!--content-->
     <div class="content">
-    	<ul class="dashboard cleaner">
-    		<li>
-            	<a href="/admin/handle/pkg/breaknews/action/edit">
-                	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>BreakingNews.jpg" alt="<?php echo $this->__ ( 'Break News Ticker' ); ?>" title="<?php echo $this->__ ( 'Break News Ticker' ); ?>" /></span>
-                    <label><?php echo $this->__ ( 'Break News Ticker' ); ?></label>
-                </a>
-            </li>
-            <li>
+    	<ul class="dashboard cleaner"><!--
+<!--    		<li>-->
+<!--            	<a href="/admin/handle/pkg/breaknews/action/edit">-->
+<!--                	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>BreakingNews.jpg" alt="<?php echo $this->__ ( 'Break News Ticker' ); ?>" title="<?php echo $this->__ ( 'Break News Ticker' ); ?>" /></span>-->
+<!--                    <label><?php echo $this->__ ( 'Break News Ticker' ); ?></label>-->
+<!--                </a>-->
+<!--            </li>-->
+         	<li>
             	<a href="/admin/handle/pkg/object-article/action/add">
                 	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>add_article.png" alt="<?php echo $this->__ ( 'Add New Article' ); ?>" title="<?php echo $this->__ ( 'Add New Article' ); ?>" /></span>
                     <label><?php echo $this->__ ( 'Add New Article' ); ?></label>
@@ -29,7 +29,7 @@
                 	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>form_Builder.jpg" alt="<?php echo $this->__ ( 'Articles Management' ); ?>" title="<?php echo $this->__ ( 'Articles Management' ); ?>" /></span>
                     <label><?php echo $this->__ ( 'Articles Management' ); ?></label>
                 </a>
-            </li>
+            </li><!--
             <li>
             	<a href="/admin/handle/pkg/feature/action/list">
                 	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>favorite-article.png" alt="<?php echo $this->__ ( 'Feature Management' ); ?>" title="<?php echo $this->__ ( 'Feature Management' ); ?>" /></span>
@@ -60,6 +60,7 @@
                     <label><?php echo $this->__ ( 'Tag_Black List' ); ?></label>
                 </a>
             </li>
+            -->
             <li>
             	<a href="/admin/handle/pkg/object-static/action/list">
                 	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>add_article2.jpg" alt="<?php echo $this->__ ( 'Pages Management' ); ?>" title="<?php echo $this->__ ( 'Pages Management' ); ?>" /></span>
@@ -71,7 +72,7 @@
                 	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>categories.jpg" alt="<?php echo $this->__ ( 'Categories Management' ); ?>" title="<?php echo $this->__ ( 'Categories Management' ); ?>" /></span>
                     <label><?php echo $this->__ ( 'Categories Management' ); ?></label>
                 </a>
-            </li>
+            </li><!--
             <li>
             	<a href="/admin/handle/pkg/object-photo/action/list">
                 	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>banner.jpg" alt="<?php echo $this->__ ( 'Photos Management' ); ?>" title="<?php echo $this->__ ( 'Photos Management' ); ?>" /></span>
@@ -84,12 +85,13 @@
                     <label><?php echo $this->__ ( 'Talasem' ); ?></label>
                 </a>
             </li>
+            -->
             <li>
             	<a href="/admin/handle/pkg/banner-area/action/list">
                 	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>banners.png" alt="<?php echo $this->__ ( 'Banners Management' ); ?>" title="<?php echo $this->__ ( 'Banners Management' ); ?>" /></span>
                     <label><?php echo $this->__ ( 'Banners Management' ); ?></label>
                 </a>
-            </li>
+            </li><!--
             <li>
             	<a href="/admin/handle/pkg/secrets/action/edit">
                 	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>top-secret.jpg" alt="<?php echo $this->__ ( 'Secrets' ); ?>" title="<?php echo $this->__ ( 'Secrets' ); ?>" /></span>
@@ -126,6 +128,7 @@
                     <label><?php echo $this->__ ( 'User_Add New User' ); ?></label>
                 </a>
             </li>
+            -->
             <li>
             	<a href="#">
                 	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>Settings.jpg" alt="<?php echo $this->__ ( 'Configuration Management' ); ?>" title="<?php echo $this->__ ( 'Configuration Management' ); ?>" /></span>
