- remove old templates files - comment extra buttons on "add" forms - modify main menu

--- a/app/theme/backend/default/template/html/menu.phtml
+++ b/app/theme/backend/default/template/html/menu.phtml
@@ -58,17 +58,19 @@
 		<li class="last"><a href="/admin/handle/pkg/object-comment/action/list">عرض التعليقات</a></li>
 	</ul>
 	</li>
+	<!-- 
 	<li><a href="/admin/handle/pkg/poll/action/add">الاستطلاعات</a>
 		<ul>
 			<li><a href="/admin/handle/pkg/poll/action/add">إضافة استطلاع</a></li>
 			<li class="last"><a href="/admin/handle/pkg/poll/action/list">عرض الاستطلاعات</a></li>
 		</ul>
 	</li>
+	 -->
 	<li><a href="#">الأراضي</a>
 		<ul>
 			<li><a href="#">إضافة أرض</a></li>
 			<li><a href="#">عرض الأراضي</a></li>
-			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+			<li><a href="#" class="hassub">عرض القوائم الفرعية</a>
 				<ul>
 					<li><a href="/admin/handle/pkg/landlots-ancillary-buildings/action/list">المباني الملحقة</a></li>
 					<li><a href="/admin/handle/pkg/landlots-livenear1/action/list">Live near 1</a></li>
@@ -100,7 +102,7 @@
 		<ul>
 			<li><a href="#">إضافة عقار</a></li>
 			<li><a href="#">عرض العقارات</a></li>
-			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+			<li><a href="#" class="hassub">عرض القوائم الفرعية</a>
 				<ul>
 					<li><a href="/admin/handle/pkg/estate-air-condition/action/list">التدفئة المركزية</a></li>
 					<li><a href="/admin/handle/pkg/estate-livenear1/action/list">Live near 1</a></li>
@@ -132,7 +134,7 @@
 		<ul>
 			<li><a href="#">إضافة مركبة</a></li>
 			<li><a href="#">عرض المركبات</a></li>
-			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+			<li><a href="#" class="hassub">عرض القوائم الفرعية</a>
 				<ul>
 					<li><a href="/admin/handle/pkg/vehicle-body-color/action/list">الألوان الخارجية</a></li>
 					<li><a href="/admin/handle/pkg/vehicle-inside-color/action/list">الألوان الداخلية</a></li>
@@ -160,9 +162,9 @@
 	</li>
 	<li><a href="#">الوسيط</a>
 		<ul>
-			<li><a href="#">إضافة وسط</a></li>
-			<li><a href="#">عرض الأوساط</a></li>
-			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+			<li><a href="#">إضافة إعلان</a></li>
+			<li><a href="#">عرض الإعلانات</a></li>
+			<li><a href="#" class="hassub">عرض القوائم الفرعية</a>
 				<ul>
 					<li class="last"><a href="/admin/handle/pkg/waseet-category/action/list">تصنيف</a></li>
 				</ul>
