--- a/app/theme/backend/default/template/banner/addArea.phtml
+++ b/app/theme/backend/default/template/banner/addArea.phtml
@@ -19,9 +19,11 @@
 <!--srch-rslt-->
 <div class="srch-rslt">
 <h3 class="fl pagetitle margthaf"><?php echo $this->__ ( 'Banner_Add New Area' ); ?></h3>
-<a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="2" class="emptbtn" type="submit"><?php echo $this->__ ( 'Banner_Save And Continue Edit' ); ?></button></em></a>
-<a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="1" class="emptbtn" type="submit"><?php echo $this->__ ( 'Banner_Save' ); ?></button></em></a>
-<a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="0" class="emptbtn" type="reset"><?php echo $this->__ ( 'Banner_Reset' ); ?></button></em></a>
+<!-- 
+	<a href="javascript:$('#mandatory-submit_label').trigger('click'); void(0);" class="save-btn"><em><button name="btn_submit" value="2" class="emptbtn" type="button"><?php echo $this->__ ( 'Banner_Save And Continue Edit' ); ?></button></em></a>
+	<a href="javascript:$('#mandatory-submit_label').trigger('click'); void(0);" class="save-btn"><em><button name="btn_submit" value="1" class="emptbtn" type="button"><?php echo $this->__ ( 'Banner_Save' ); ?></button></em></a>
+	<a href="javascript:$('#mandatory-reset').trigger('click'); void(0);" class="save-btn"><em><button name="btn_submit" value="0" class="emptbtn" type="reset"><?php echo $this->__ ( 'Banner_Reset' ); ?></button></em></a>
+ -->
 <a href="javascript:history.go(-1)" class="backbtn"><em><button name="btn_submit" value="-1" class="emptbtn" type="button" onlcick="javascript:history.go(-1);"><?php echo $this->__ ( 'Banner_Back' ); ?></button></em></a>
 </div>
 <!--end srch-rslt-->
