--- a/app/theme/backend/default/template/object/listObjectType.phtml
+++ b/app/theme/backend/default/template/object/listObjectType.phtml
@@ -12,13 +12,13 @@
 <!--content-->
 <form method="get" action="" id="frm">
 <div>
-	<input type="hidden" id="token" name="token" value="<?php print $this->sanitized->title->value; ?>" />
+	<input type="hidden" id="token" name="token" value="<?php print $this->sanitized->token->value; ?>" />
 	<input type="hidden" id="actionURI" value="<?php print $this->sanitized->actionURI->value; ?>" />
 </div>
 <div class="content">
 <div class="srch-rslt cleaner">
-<h3 class="fl pagetitle margthaf"><?php echo $this->__ ( 'Object_Object Type' ); ?></h3>
-<a href="<?php print $this->sanitized->actionURI->value; ?>add" class="add-btn"><em><?php echo $this->__ ( 'Object_Add New Object Type' ); ?></em></a></div>
+<h3 class="fl pagetitle margthaf"><?php echo $this->__ ( 'Object_Type' ); ?></h3>
+<a href="<?php print $this->sanitized->actionURI->value; ?>add" class="add-btn"><em><?php echo $this->__ ( 'Object_Add New Type' ); ?></em></a></div>
 <!--filtration-->
 <div class="filtration cleaner">
 <button type="button"
@@ -41,33 +41,36 @@
 <!--srch-rsult-->
 <table class="srch-rsult">
 	<tr class="heading">
-	<th class="jstalgntop col1"><input type="checkbox" name="selectAll" id="selectAll" /></th>
-		<th class="jstalgntop col1"><a
-			href="<?php echo $this->sort->title->href; ?>"
-			class="<?php echo $this->sort->title->cssClass; ?>"><span
-			class="<?php echo $this->sort->title->cssClass; ?>"><?php echo $this->__ ( 'Object_Title' ); ?></span></a></th>
-		<th class="jstalgntop col1"><a
-			href="<?php echo $this->sort->label->href; ?>"
-			class="<?php echo $this->sort->label->cssClass; ?>"><span
-			class="<?php echo $this->sort->label->cssClass; ?>"><?php echo $this->__ ( 'Object_Label' ); ?></span></a></th>
-		<th class="jstalgntop colyesno"><a
-			href="<?php echo $this->sort->published->href; ?>"
-			class="<?php echo $this->sort->published->cssClass; ?>"><span
-			class="<?php echo $this->sort->published->cssClass; ?>"><?php echo $this->__ ( 'Object_Publish' ); ?></span></a></th>
-		<th class="jstalgntop colyesno"><a
-			href="<?php echo $this->sort->approved->href; ?>"
-			class="<?php echo $this->sort->approved->cssClass; ?>"><span
-			class="<?php echo $this->sort->approved->cssClass; ?>"><?php echo $this->__ ( 'Object_Aprrove' ); ?></span></a></th>
-		<th class="jstalgntop col5"><a
-			href="<?php echo $this->sort->dateAdded->href; ?>"
-			class="<?php echo $this->sort->dateAdded->cssClass; ?>"><span
-			class="<?php echo $this->sort->dateAdded->cssClass; ?>"><?php echo $this->__ ( 'Object_Date Added' ); ?></span></a></th>
+		<th class="jstalgntop col1"><input type="checkbox" name="selectAll" id="selectAll" /></th>
+		<th class="jstalgntop col1">
+			<a href="<?php echo $this->sort->title->href; ?>" class="<?php echo $this->sort->title->cssClass; ?>">
+			<span class="<?php echo $this->sort->title->cssClass; ?>"><?php echo $this->__ ( 'Object_Title' ); ?></span></a></th>
+		<th class="jstalgntop col1"><a href="<?php echo $this->sort->label->href; ?>"
+			class="<?php echo $this->sort->label->cssClass; ?>"><span class="<?php echo $this->sort->label->cssClass; ?>"><?php echo $this->__ ( 'Object_Label' ); ?></span></a></th>
+		<th class="jstalgntop colyesno"><a href="<?php echo $this->sort->published->href; ?>"
+			class="<?php echo $this->sort->published->cssClass; ?>"><span class="<?php echo $this->sort->published->cssClass; ?>"><?php echo $this->__ ( 'Object_Publish' ); ?></span></a></th>
+		<th class="jstalgntop colyesno"><a href="<?php echo $this->sort->approved->href; ?>"
+			class="<?php echo $this->sort->approved->cssClass; ?>"><span class="<?php echo $this->sort->approved->cssClass; ?>"><?php echo $this->__ ( 'Object_Aprrove' ); ?></span></a></th>
+		<th class="jstalgntop col5"><a href="<?php echo $this->sort->date_added->href; ?>" class="<?php echo $this->sort->date_added->cssClass; ?>"><span
+			class="<?php echo $this->sort->date_added->cssClass; ?>"><?php echo $this->__ ( 'Object_Date Added' ); ?></span></a></th>
 		<th class="jstalgntop tools last"><span><?php echo $this->__ ( 'Object_Tools' ); ?></span></th>
 	</tr>
 	
 	<?php 
-	if (!empty($this->typeList)) {
-		echo $this->typeList; 
+	if (!empty($this->objectList)) {
+		foreach ($this->objectList as $key => $value) {
+				echo '<tr>';
+				echo '<td class="jstalgntop" style="text-align: center;"><input type="checkbox" name="typeId[' . $value['id'] . ']" id="check" value="Yes" /></td>';
+				echo '<td class="jstalgntop">' . $value['title'] . '</td>';
+				echo '<td class="jstalgntop">' . $value['label'] . '</td>';
+				echo '<td class="jstalgntop">' . $this -> __($value['published']) . '</td>';
+				echo '<td class="jstalgntop">' . $this -> __($value['approved']) . '</td>';
+				echo '<td class="jstalgntop">' . $value['date_added'] . '</td>';
+				echo '<td class="jstalgntop last"><a href="/admin/handle/pkg/object-type/action/edit/id/' . $value['id'] . '"
+						class="modify fl" title="Edit"></a> <a href="/admin/handle/pkg/object-type/action/view/id/' . $value['id'] . '"
+			class="preview fl" title="Preview"></a></td>';
+				echo '</tr>';
+			}
 	} 
 	?>
 
