add configurations to menu and dashboard

--- a/app/theme/backend/default/template/dashboard.phtml
+++ b/app/theme/backend/default/template/dashboard.phtml
@@ -131,7 +131,7 @@
             </li>
             -->
             <li>
-            	<a href="#">
+            	<a href="/admin/handle/pkg/configs/action/list/">
                 	<span><img src="<?php print $this->defaultSkinImagesUrl; ?>Settings.jpg" alt="<?php echo $this->__ ( 'Configuration Management' ); ?>" title="<?php echo $this->__ ( 'Configuration Management' ); ?>" /></span>
                     <label><?php echo $this->__ ( 'Configuration Management' ); ?></label>
                 </a>
