--- a/app/theme/backend/default/template/html/menu.phtml
+++ b/app/theme/backend/default/template/html/menu.phtml
@@ -202,6 +202,7 @@
 	</li>
 	<li><a href="#">خيارات أخرى</a>
 	<ul>
+		<li><a href="/admin/handle/pkg/configs/action/list"><?php echo $this->__ ( 'Configuration Management' ); ?></a>
 		<li><a href="#" class="hassub">اللغات</a>
 			<ul>
 				<li><a href="/admin/handle/pkg/locale/action/add">إضافة لغة</a></li>
