Upload all cenfigs modification except edit behavior

--- a/app/theme/backend/default/template/configs/list.phtml
+++ b/app/theme/backend/default/template/configs/list.phtml
@@ -60,7 +60,7 @@
 				echo '<td class="jstalgntop">' . $value['option_value'] . '</td>';
 				echo '<td class="jstalgntop">' . $this -> __($value['option_status']) . '</td>';
 				echo '<td class="jstalgntop">' . $value['date_added'] . '</td>';
-				echo '<td class="jstalgntop last"><a href="/admin/handle/pkg/configs/action/edit/id/' . $value['id'] . '"
+				echo '<td class="jstalgntop last"><a href="/admin/handle/pkg/configs/action/showgroup/group_id/' . $value['group_id'] . '/locale_id/'.$value['locale_id'].'"
 						class="modify fl" title="Edit"></a> <a href="/admin/handle/pkg/configs/action/view/id/' . $value['id'] . '"
 			class="preview fl" title="Preview"></a></td>';
 				echo '</tr>';
