--- a/app/theme/backend/default/template/configs/listGroups.phtml
+++ b/app/theme/backend/default/template/configs/listGroups.phtml
@@ -29,6 +29,7 @@
 	<div class="entrdcont">
 		<div align="center" class="wdthauto">
 			<form method="post" id="configs_groups" name="configs_groups" action="/admin/handle/pkg/configs/action/edit">
+				<input type="hidden" name="firststep" value="1" />
 				<table>
 					<tr>
 						<td><?php echo $this->__ ( 'Configs_Groups' )?></td>
