Upload Vehicle for sale functionality

--- a/app/theme/backend/default/template/html/menu.phtml
+++ b/app/theme/backend/default/template/html/menu.phtml
@@ -132,8 +132,8 @@
 	</li>
 	<li><a href="#">المركبات</a>
 		<ul>
-			<li><a href="#">إضافة مركبة</a></li>
-			<li><a href="#">عرض المركبات</a></li>
+			<li><a href="/admin/handle/pkg/vehicle-for-sale/action/add">إضافة مركبة</a></li>
+			<li><a href="/admin/handle/pkg/vehicle-for-sale/action/list">عرض المركبات</a></li>
 			<li><a href="#" class="hassub">عرض القوائم الفرعية</a>
 				<ul>
 					<li><a href="/admin/handle/pkg/vehicle-body-color/action/list">الألوان الخارجية</a></li>
