Add vehicle for sale/rent to menu

--- a/app/theme/backend/default/template/html/en-menu.phtml
+++ b/app/theme/backend/default/template/html/en-menu.phtml
@@ -112,8 +112,10 @@
 	</li>
 	<li><a href="#">المركبات</a>
 		<ul>
-			<li><a href="/admin/handle/pkg/vehicle-for-sale/action/add">إضافة مركبة</a></li>
-			<li><a href="/admin/handle/pkg/vehicle-for-sale/action/list">عرض المركبات</a></li>
+			<li><a href="/admin/handle/pkg/vehicle-for-sale/action/add">إضافة مركبة للبيع</a></li>
+			<li><a href="/admin/handle/pkg/vehicle-for-rent/action/add">إضافة مركبة للإيجار</a></li>
+			<li><a href="/admin/handle/pkg/vehicle-for-sale/action/list">عرض مركبات البيع</a></li>
+			<li><a href="/admin/handle/pkg/vehicle-for-rent/action/list">عرض مركبات الإيجار</a></li>
 			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
 				<ul>
 					<li><a href="/admin/handle/pkg/vehicle-body-color/action/list">الألوان الخارجية</a></li>
