--- a/app/theme/backend/default/template/html/en-menu.phtml
+++ b/app/theme/backend/default/template/html/en-menu.phtml
@@ -48,8 +48,8 @@
 	</li>
 	<li><a href="#">Landlots</a>
 		<ul>
-			<li><a href="#">Add Landlot</a></li>
-			<li><a href="#">List Landlot</a></li>
+			<li><a href="/admin/handle/pkg/landlots/action/add">Add Landlot</a></li>
+			<li><a href="/admin/handle/pkg/landlots/action/list">List Landlots</a></li>
 			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
 				<ul>
 					<li><a href="/admin/handle/pkg/landlots-ancillary-buildings/action/list">المباني الملحقة</a></li>
