--- a/app/theme/backend/default/template/html/menu.phtml
+++ b/app/theme/backend/default/template/html/menu.phtml
@@ -68,8 +68,8 @@
 	 -->
 	<li><a href="#">الأراضي</a>
 		<ul>
-			<li><a href="#">إضافة أرض</a></li>
-			<li><a href="#">عرض الأراضي</a></li>
+			<li><a href="/admin/handle/pkg/landlots/action/add">إضافة أرض</a></li>
+			<li><a href="/admin/handle/pkg/landlots/action/list">عرض الأراضي</a></li>
 			<li><a href="#" class="hassub">عرض القوائم الفرعية</a>
 				<ul>
 					<li><a href="/admin/handle/pkg/landlots-ancillary-buildings/action/list">المباني الملحقة</a></li>
