--- a/app/theme/backend/default/template/vehicle/listForRent.phtml
+++ b/app/theme/backend/default/template/vehicle/listForRent.phtml
@@ -51,7 +51,7 @@
 						</select>
 						<input type="hidden" id="redirectURI" name="redirectURI" value="<?php print $this -> sanitized -> redirectURI -> value;?>" />
 					</div>
-					<?php include './html/excel.phtml';?>
+					<?php //include './html/excel.phtml';?>
 					<!--end filtration-->
 					<!--srch-rsult-->
 					<table class="srch-rsult">
