Implement Real Estate

--- a/app/theme/backend/default/template/html/en-menu.phtml
+++ b/app/theme/backend/default/template/html/en-menu.phtml
@@ -80,8 +80,8 @@
 	</li>
 	<li><a href="#">العقارات</a>
 		<ul>
-			<li><a href="#">إضافة عقار</a></li>
-			<li><a href="#">عرض العقارات</a></li>
+			<li><a href="/admin/handle/pkg/estate/action/add">إضافة عقار</a></li>
+			<li><a href="/admin/handle/pkg/estate/action/list">عرض العقارات</a></li>
 			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
 				<ul>
 					<li><a href="/admin/handle/pkg/estate-air-condition/action/list">التدفئة المركزية</a></li>
